--- a/CAShapeLayerExample/CAShapeLayerExample/Base.lproj/Main.storyboard
+++ b/CAShapeLayerExample/CAShapeLayerExample/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CAShapeLayerExample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,49 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="85b-Zm-1TV" userLabel="Header">
+                                <rect key="frame" x="0.0" y="20" width="375" height="33.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MakeItMobile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXV-8m-IGe" userLabel="Logo">
+                                        <rect key="frame" x="0.0" y="8" width="375" height="17.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="NXV-8m-IGe" firstAttribute="leading" secondItem="85b-Zm-1TV" secondAttribute="leading" id="5Tv-zk-IZI"/>
+                                    <constraint firstAttribute="bottom" secondItem="NXV-8m-IGe" secondAttribute="bottom" constant="8" id="Lx0-Gr-ukD"/>
+                                    <constraint firstItem="NXV-8m-IGe" firstAttribute="top" secondItem="85b-Zm-1TV" secondAttribute="top" constant="8" id="VrO-wS-gGj"/>
+                                    <constraint firstAttribute="trailing" secondItem="NXV-8m-IGe" secondAttribute="trailing" id="fXW-Kx-5d3"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FUf-ia-8Fd">
+                                <rect key="frame" x="0.0" y="53.5" width="375" height="613.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="FUf-ia-8Fd" secondAttribute="bottom" id="0Kn-GD-p3i"/>
+                            <constraint firstItem="85b-Zm-1TV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2Y0-TG-Ubo"/>
+                            <constraint firstAttribute="trailing" secondItem="FUf-ia-8Fd" secondAttribute="trailing" id="CEX-nI-YZi"/>
+                            <constraint firstItem="85b-Zm-1TV" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.05" id="D30-Fk-bNh"/>
+                            <constraint firstItem="FUf-ia-8Fd" firstAttribute="top" secondItem="85b-Zm-1TV" secondAttribute="bottom" id="TRD-kJ-DjF"/>
+                            <constraint firstAttribute="trailing" secondItem="85b-Zm-1TV" secondAttribute="trailing" id="bQV-8p-VKB"/>
+                            <constraint firstItem="FUf-ia-8Fd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hBN-zu-dTo"/>
+                            <constraint firstItem="85b-Zm-1TV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="wT9-ks-r6G"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="FUf-ia-8Fd" id="giu-FO-qcL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="137.18140929535232"/>
         </scene>
     </scenes>
 </document>
