--- a/CAShapeLayerExample/CAShapeLayerExample/StyledTableViewCell.xib
+++ b/CAShapeLayerExample/CAShapeLayerExample/StyledTableViewCell.xib
@@ -49,7 +49,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="5QO-Qg-N7N" firstAttribute="top" secondItem="QAN-hW-yXA" secondAttribute="top" id="4xN-ku-SRF"/>
                             <constraint firstItem="5QO-Qg-N7N" firstAttribute="bottom" secondItem="QAN-hW-yXA" secondAttribute="bottom" id="dyL-9j-d16"/>
