--- a/CAShapeLayerExample/CAShapeLayerExample/SlideDemo.storyboard
+++ b/CAShapeLayerExample/CAShapeLayerExample/SlideDemo.storyboard
@@ -24,12 +24,12 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MakeItMobile" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5f-AJ-KkC">
                                 <rect key="frame" x="37.5" y="167.5" width="300" height="333.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="35"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="C5f-AJ-KkC" firstAttribute="height" secondItem="7YN-PT-IR5" secondAttribute="height" multiplier="0.5" id="EKN-ZF-6mL"/>
                             <constraint firstItem="C5f-AJ-KkC" firstAttribute="width" secondItem="7YN-PT-IR5" secondAttribute="width" multiplier="0.8" id="aNo-EE-DOb"/>
