--- a/CAShapeLayerExample/CAShapeLayerExample/AnimatedShape.storyboard
+++ b/CAShapeLayerExample/CAShapeLayerExample/AnimatedShape.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,8 +21,25 @@
                     <view key="view" contentMode="scaleToFill" id="tbp-Mz-JcG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MakeItMobile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tM-XQ-0Eh">
+                                <rect key="frame" x="37" y="167" width="300" height="333.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7tM-XQ-0Eh" firstAttribute="width" secondItem="tbp-Mz-JcG" secondAttribute="width" multiplier="0.8" id="WPp-jP-eB7"/>
+                            <constraint firstItem="7tM-XQ-0Eh" firstAttribute="centerY" secondItem="tbp-Mz-JcG" secondAttribute="centerY" id="nz9-IV-U2h"/>
+                            <constraint firstItem="7tM-XQ-0Eh" firstAttribute="height" secondItem="tbp-Mz-JcG" secondAttribute="height" multiplier="0.5" id="v5o-tz-vcX"/>
+                            <constraint firstItem="7tM-XQ-0Eh" firstAttribute="centerX" secondItem="tbp-Mz-JcG" secondAttribute="centerX" id="yoj-VQ-CCV"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="titleLabel" destination="7tM-XQ-0Eh" id="mJD-wG-fPv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bNc-UD-bws" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
